test/simple/correct/Export.hs
module Export(three) where

three :: Int
three = 3
