test/simple/typeerrors/Examples/ExprTypedResult.hs
module ExprTypedResult where

f :: Bool
f = (3 :: Int)
